--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>Encabezado</h1>
+        <h1>Manejando eventos con jQquery</h1>
     </header>
     <nav>
         <ul>
